2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* milli/Makefile.am: Reflect having moved automake/.
	* semaphore/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2002-12-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_CHECK_CUSTOM_BSP.
	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* milli/Makefile.am: Ditto.
	* semaphore/Makefile.am: Ditto.
	* timer/Makefile.am: Ditto.

2002-12-16	Joel Sherrill <joel@OARcorp.com>

	* milli/milli.S: Per PR329, use GNU binutils assembler directives.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* milli/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* semaphore/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).